RESOLVED FIXED199596
Null check HistoryItems given to loadDifferentDocumentItem
https://bugs.webkit.org/show_bug.cgi?id=199596
Summary Null check HistoryItems given to loadDifferentDocumentItem
Alex Christensen
Reported 2019-07-08 15:53:33 PDT
Null check HistoryItems given to loadDifferentDocumentItem
Attachments
Patch (1.76 KB, patch)
2019-07-08 15:54 PDT, Alex Christensen
rniwa: review+
Alex Christensen
Comment 1 2019-07-08 15:54:50 PDT
Alex Christensen
Comment 2 2019-07-08 15:54:52 PDT
Ryosuke Niwa
Comment 3 2019-07-08 19:55:46 PDT
Comment on attachment 373675 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=373675&action=review > Source/WebCore/loader/FrameLoader.cpp:3874 > + if (item) Should we add a debug assertion / release logging when item is null?
Alex Christensen
Comment 4 2019-07-09 11:56:01 PDT
Note You need to log in before you can comment on or make changes to this bug.