Cherry-pick r247266. rdar://problem/49884391

Null check HistoryItems given to loadDifferentDocumentItem
    https://bugs.webkit.org/show_bug.cgi?id=199596
    <rdar://problem/49884391>

    Reviewed by Ryosuke Niwa.

    * loader/FrameLoader.cpp:
    (WebCore::FrameLoader::retryAfterFailedCacheOnlyMainResourceLoad):
    Under some rare and mysterious conditions we can have a null provisionalItem when loading from the cache.

    Canonical link: https://commits.webkit.org/213514@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247266 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213413.8@safari-608.1.34.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608.1.34.1-branch@247304 268f45cc-cd09-0410-ab3c-d52691b4dbfc